# guiscrcpy

./: .flake8  .gitignore  .gitlab-ci.yml  .pyup.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  __main__.py  __maintest__.py  _config.yml  bottompanelUI.py  bottompanelui.ui  breeze_resources.py  dialogg.ui  guiscrcpy-linux.spec  guiscrcpy-src-installer.sh  guiscrcpy-windows.spec  guiscrcpy.cfg  guiscrcpy.desktop  guiscrcpy.spec  io.srevinsaju.guiscrcpy.yml  landscape.ui.autosave  main.py  main.pyproject  main_backup.py  main_threading.py  mainui.py  mainwindow.ui  mainwindow.ui.autosave  manifest.json  notifUI.py  pyproject.toml  releaser  requirement.txt  requirements.txt  rsrc.qrc  (+7 more)
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: appimage.yml  continuous.yml  macospython.yml  main.yml  pythonapp.yml  pythonpackage.yml  pythonpublish.yml  release.yml  stale.yml  winexe.yml  winpython.yml
Backup/: config.cfg  main 1.9.2.py  main.py  mainwindow (copy).ui  ss.py  ssss.py  swipeUX.py  untitled.ui
appimage/: entrypoint.sh  guiscrcpy.appdata.xml  guiscrcpy.desktop  requirements.txt
docs/: BUILD.md  CONFIGURATION.md  FAQ.md  FEATURES.md  INSTALL.md  README.md  README.rst  SNAP.md  _config.yml
docs/_includes/: aside.html  call-to-action.html  head.html  header.html  nav.html  portfolio.html  portfolio2.html  services.html
docs/css/: main.scss
guiscrcpy/: __init__.py  __main__.py  app.py  breeze_resources.py  cli.py  constants.py  guiscrcpy  guiscrcpy-mapper  guiscrcpy.mapper  guiscrcpy.py  launcher.py  logging.py  mainui.py  mainwindow.ui  mapper.py  version.py
guiscrcpy/install/: downloader.py  finder.py
guiscrcpy/lib/: check.py  config.py  mainui.py  mapper.py  notify.py  process.py  toolkit.py  utils.py  ver.py
guiscrcpy/network/: network.py
guiscrcpy/platform/: darwin.py  linux.py  platform.py  windows.py
guiscrcpy/settings/: settings.py
guiscrcpy/theme/: decorate.py  desktop_shortcut.py  linux_desktop_shortcut_template.py  style.py  termcolor.py
guiscrcpy/ts/: eng-chs.ts  eng-eng.ts  eng-he.ts  template.ts
guiscrcpy/ui/: bottompanelui.ui  dialog.ui  downloader.py  downloader.ui  main.py  mainwindow.ui  network.py  network.ui  panel.py  rsrc.qrc  rsrc_rc.py  settings.py  settings.ui  toolkit.py  toolkit_ui.ui  ui.qrc
guiscrcpy/ux/: __init__.py  initializer.py  network.py  panel.py  settings.py  swipe.py  toolkit.py
installers/linux/: .guiscrcpy-systemless-linux-installer.sh.swp  README  guiscrcpy-src-launcher.sh  guiscrcpy-systemless-linux-installer.sh  guiscrcpy.desktop
installers/windows/: guiscrcpy.VisualElementsManifest.xml
macscript/: GuiScrcpy.dmg  README.md
pyappimage/: .env.template  AppRun.standalone.sh  pyappimage.yml  scrcpy
pyappimage/hooks/: VERSION
rsrc/: android.xcf
scripts/: build-appimage.sh  display-ci.sh  guiscrcpy  guiscrcpy-mapper  guiscrcpy.py
snap/: snapcraft.yaml
snap/gui/: guiscrcpy.desktop
snap/local/: snapcraft.yaml
ui/: main.py  main.pyproject  mainwindow.ui.autosave
ui/resources/: breeze.qrc  mainwindow.ui  (+3 more)
www/: index.html
(+47 files in other folders)
