[tool.poetry]
name = "guiscrcpy"
version = "4.11.3"
description = "A simple, pluggable, graphical user interface for the fastest Android screen mirroring software"
authors = ["Srevin Saju <srevinsaju@sugarlabs.org>"]
license = "GPLv3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/srevinsaju/guiscrcpy/issues"


[tool.poetry.dependencies]
python = ">=3.7,<3.10"
psutil = "^5.8.0"
pynput = "1.6.8"
colorama = "^0.4.4"
click = "^8.0.1"
QtPy = "^1.9.0"
PyQt5 = {version = "^5.15.4", optional = true}
PyInstaller = {version = "*", optional = true}
pywin32 = {version = "302", markers = "platform_system == 'Windows'" }
PySide2 = {version = "^5.15.2", optional = true}
CairoSVG = {version = "^2.5.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[tool.poetry.extras]
PyQt5 = ["pyqt5"]
PySide2 = ["pyside2"]
PyInstaller = ["pyinstaller"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
guiscrcpy = "guiscrcpy.cli:cli"
